# promptix

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml
debian/: changelog  control  copyright  promptix.install  promptix.manpages  rules
docs/: promptix.1
src/promptix/: __init__.py  cli.py
src/promptix/core/: __init__.py  logger.py  registry.py  result.py  session.py
src/promptix/data/: __init__.py  bias.txt  jailbreak.txt  leakage.txt  prompt_injection.txt
src/promptix/modules/: __init__.py  base.py  bias.py  jailbreak.py  leakage.py  prompt_injection.py  robustness.py
src/promptix/reporting/: __init__.py
src/promptix/targets/: __init__.py  base.py  echo.py  http_generic.py  openai_chat.py
tests/: test_promptix.py
