[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptix"
version = "0.1.0"
description = "Adversarial pentest toolkit for LLMs — prompt injection, jailbreak, bias and robustness analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Deivid Kelven (xM4skByt3z)" }]
urls = { Homepage = "https://github.com/xm4skbyt3z/promptix", Source = "https://github.com/xm4skbyt3z/promptix", "Bug Tracker" = "https://github.com/xm4skbyt3z/promptix/issues" }
keywords = ["llm", "security", "pentest", "adversarial", "prompt-injection", "offsec", "kali", "ai-security", "red-team"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "httpx>=0.27",
    "rich>=13.7",
    "prompt_toolkit>=3.0.43",
    "PyYAML>=6.0",
    "pydantic>=2.6",
    "typer>=0.12",
]

[project.optional-dependencies]
art = ["adversarial-robustness-toolbox>=1.17", "numpy>=1.26", "scikit-learn>=1.4"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
promptix = "promptix.cli:entry"
pix = "promptix.cli:entry"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"promptix.data" = ["*.yaml", "*.yml", "*.txt"]

[tool.ruff]
line-length = 100
target-version = "py310"
